Fri Nov  7 17:11:15 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * ace/Dev_Poll_Reactor.cpp:
          Added #include of os_poll.h and OS_NS_sys_mman.h.

        * ace/OS_NS_string.inl:
          Added #include of os_string.h.

        * ace/OS_NS_wchar.{h,inl}:
          Added #ifdef ACE_HAS_WCHAR around fgetwc() declaration as well
          as some cosmetic changes, #ifdef indentation.

Fri Nov  7 11:28:39 2003  Steve Huston  <shuston@riverace.com>

	* tests/Vector_Test.cpp: Added tests of the equality and inequality
	  operators.

Fri Nov  7 06:50:49 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * Kokyu/Makefile.Kokyu:
        * ace/Makefile.ace:
        * ace/RMCast/Makefile:
        * apps/Gateway/Gateway/Makefile:
        * apps/Gateway/Peer/Makefile:
        * apps/drwho/Makefile:
        * apps/gperf/src/Makefile:
        * apps/gperf/tests/Makefile:
        * examples/ASX/CCM_App/Makefile:
        * examples/ASX/Event_Server/Event_Server/Makefile:
        * examples/ASX/Event_Server/Transceiver/Makefile:
        * examples/ASX/Message_Queue/Makefile:
        * examples/ASX/UPIPE_Event_Server/Makefile:
        * examples/C++NPv1/Makefile:
        * examples/Connection/misc/Makefile:
        * examples/Connection/non_blocking/Makefile:
        * examples/IOStream/client/Makefile:
        * examples/IOStream/server/Makefile:
        * examples/IPC_SAP/DEV_SAP/reader/Makefile:
        * examples/IPC_SAP/DEV_SAP/writer/Makefile:
        * examples/IPC_SAP/FIFO_SAP/Makefile:
        * examples/IPC_SAP/FILE_SAP/Makefile:
        * examples/IPC_SAP/SOCK_SAP/Makefile:
        * examples/IPC_SAP/SPIPE_SAP/Makefile:
        * examples/IPC_SAP/TLI_SAP/Makefile:
        * examples/IPC_SAP/UPIPE_SAP/Makefile:
        * examples/Log_Msg/Makefile:
        * examples/Logger/Acceptor-server/Makefile:
        * examples/Logger/client/Makefile:
        * examples/Logger/simple-server/Makefile:
        * examples/Map_Manager/Makefile: