@@ -618,10 +618,6 @@ ACE_Message_Block::ACE_Message_Block (const ACE_Message_Block &mb,
       // to do what it wants
 
     }
-
-
-
-
 }
 
 int
